--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-hello world
+<!DOCTYPE html>
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Rob Griffin</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+        crossorigin="anonymous"/>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;400&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+
+</head>
+
+<body>
+
+<div class = 'topBar'>
+<div class = 'mainTitle'>
+  <span class = 'mainSubtle'>Rob Griffin: </span>Profile
+</div>
+</div>
+
+<div class = 'mainBody'>
+
+  <p>
+    I am a statistical programmer at AstraZeneca working on research
+    and development related to respiratory, inflammatory and autoimmune diseases.
+    Prior to joining AstraZeneca in 2020, I performed research in evolutionary
+    quantitative genetics. I received my PhD in Evolutionary Genetics from Uppsala
+    University in 2015, and held positions as a Postdoctoral Researcher at the
+    University of Turku, Uppsala University and the University of Queensland. I work
+    with and practise a number of programming languages, mostly using R and SAS
+    for statistical analysis, data processing and data visualisation. I also use
+    HTML, CSS and JavaScript for front-end web development, and XML and
+    Kotlin/Java for Android app development, and have dabbled with Python, Perl
+    and LaTeX.
+
+  </p>
+
+</div>
+
+</body>
