--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class = 'mainBody'>
 
-  <p>
+  <div>
     I am a statistical programmer at AstraZeneca working on research
     and development related to respiratory, inflammatory and autoimmune diseases.
     Prior to joining AstraZeneca in 2020, I performed research in evolutionary
@@ -36,7 +36,7 @@
     Kotlin/Java for Android app development, and have dabbled with Python, Perl
     and LaTeX.
 
-  </p>
+  </div>
 
 </div>
 
