--- a/index.html
+++ b/index.html
@@ -1,43 +1,78 @@
 <!DOCTYPE html>
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset='utf-8'/>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
   <title>Rob Griffin</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-        crossorigin="anonymous"/>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;400&display=swap" rel="stylesheet">
+  <link rel='stylesheet' href='style.css'>
+  <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.8.1/css/all.css'
+        integrity='sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf'
+        crossorigin='anonymous'/>
+  <link href='https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;400&display=swap' rel='stylesheet'>
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'/>
 
 </head>
 
 <body>
 
 <div class = 'topBar'>
-<div class = 'mainTitle'>
-  <span class = 'mainSubtle'>Rob Griffin: </span>Profile
-</div>
+  <div class = 'mainTitle'>Profile</div>
 </div>
 
 <div class = 'mainBody'>
 
-  <div>
-    I am a statistical programmer at AstraZeneca working on research
-    and development related to respiratory, inflammatory and autoimmune diseases.
-    Prior to joining AstraZeneca in 2020, I performed research in evolutionary
-    quantitative genetics. I received my PhD in Evolutionary Genetics from Uppsala
-    University in 2015, and held positions as a Postdoctoral Researcher at the
-    University of Turku, Uppsala University and the University of Queensland. I work
-    with and practise a number of programming languages, mostly using R and SAS
-    for statistical analysis, data processing and data visualisation. I also use
-    HTML, CSS and JavaScript for front-end web development, and XML and
-    Kotlin/Java for Android app development, and have dabbled with Python, Perl
-    and LaTeX.
-
+  <div class = 'contactCard'>
+    <div class = 'leftCol'>
+      <img src = 'IMAGES/rgriffin.jpg' class = 'contactImg'></img>
+    </div>
+    <div class = 'rightCol'>
+      <ul>
+        <li class = 'contactTopline'>Rob Griffin, PhD</li>
+        <li>Statistical Programmer</li>
+        <li>AstraZeneca, Gothenburg</li>
+        <li><a href = 'https://twitter.com/griffinevo' target = '_blank'><i class = 'icon fa fa-twitter'></i>@GriffinEvo</a></li>
+        <li><a href = 'https://www.linkedin.com/in/robgriffin247' target = '_blank'><i class = 'icon fab fa-linkedin-square'></i>/robgriffin247</a></li>
+        <li><a href = 'mailto:robgriffin247@hotmail.com' target = '_blank'><i class = 'icon fas fa-envelope'></i>robgriffin247[at]hotmail.com</a></li>
+      </ul>
+    </div>
   </div>
 
-</div>
+  <div class = 'sectionCon'>
+    <div class = 'sectionHead'>Summary</div>
+    <div class = 'sectionBody'>
+      I was first exposed to statistical programming as an undergraduate student in
+      biology and increasingly interested in statistics and programming as I used
+      them for research during my academic career. I decided to change career
+      so that these could become my main tasks in 2020. I now have over ten years
+      of experience in using R for data processing, visualisation and analysis,
+      used Rmarkdown for documentation and Rshiny for app development.
+    </div>
+    <div class = 'sectionBody'>
+      In addition to my expertise in R, I have taught myself a number of other
+      programming languages including HTML, CSS and JavaScript for front-end web
+      development, Java/Kotlin and XML for Android app development, and some basic
+      LaTeX, Python and Perl. Since joining AstraZeneca, I have also been learning
+      and using SAS for statistical programming. I enjoy the challenge of finding
+      efficient, elegant and creative ways of solving problems with code, and
+      statistical programming places that work in a stimulating and fulfilling context.
+    </div>
+  </div>
+
+
+<!--
+  <div class = 'sectionCon'>
+    <div class = 'sectionHead'>Employment</div>
+    <div class = 'sectionBody'>
+    </div>
+  </div>
+
+  <div class = 'sectionCon'>
+    <div class = 'sectionHead'>Education</div>
+    <div class = 'sectionBody'>
+    </div>
+  </div>
+
+-->
+
 
 </body>
