--- a/index.html
+++ b/index.html
@@ -42,19 +42,18 @@
     <div class = 'sectionBody'>
       I was first exposed to statistical programming as an undergraduate student in
       biology and increasingly interested in statistics and programming as I used
-      them for research during my academic career. I decided to change career
-      so that these could become my main tasks in 2020. I now have over ten years
-      of experience in using R for data processing, visualisation and analysis,
-      used Rmarkdown for documentation and Rshiny for app development.
+      them for research during my academic career.  I enjoy the challenge of finding
+      efficient, elegant and creative ways of solving problems with code, and
+      statistical analysis places that work in a stimulating and fulfilling context.
+      I decided to change career so that these could become my main tasks in 2020.
     </div>
     <div class = 'sectionBody'>
-      In addition to my expertise in R, I have taught myself a number of other
+      I have over ten years of experience in using R for data processing, visualisation and analysis,
+      used Rmarkdown for documentation and Rshiny for app development. In addition to my expertise in R, I have taught myself a number of other
       programming languages including HTML, CSS and JavaScript for front-end web
       development, Java/Kotlin and XML for Android app development, and some basic
       LaTeX, Python and Perl. Since joining AstraZeneca, I have also been learning
-      and using SAS for statistical programming. I enjoy the challenge of finding
-      efficient, elegant and creative ways of solving problems with code, and
-      statistical programming places that work in a stimulating and fulfilling context.
+      and using SAS for statistical programming.
     </div>
   </div>
 
