--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
         <li class = 'contactTopline'>Rob Griffin, PhD</li>
         <li>Statistical Programmer</li>
         <li>AstraZeneca, Gothenburg</li>
-        <li><a href = 'https://twitter.com/griffinevo' target = '_blank'><i class = 'icon fa fa-twitter'></i>@GriffinEvo</a></li>
-        <li><a href = 'https://www.linkedin.com/in/robgriffin247' target = '_blank'><i class = 'icon fab fa-linkedin-square'></i>/robgriffin247</a></li>
-        <li><a href = 'mailto:robgriffin247@hotmail.com' target = '_blank'><i class = 'icon fas fa-envelope'></i>robgriffin247[at]hotmail.com</a></li>
+        <div class = 'iconCon'>
+          <li><a href = 'https://twitter.com/griffinevo' target = '_blank'><i class = 'icon fa fa-twitter'></i><span class = 'desktopOnly'>@GriffinEvo</span></a></li>
+          <li><a href = 'https://www.linkedin.com/in/robgriffin247' target = '_blank'><i class = 'icon fab fa-linkedin-square'></i><span class = 'desktopOnly'>/robgriffin247</span></a></li>
+          <li><a href = 'mailto:robgriffin247@hotmail.com' target = '_blank'><i class = 'icon fas fa-envelope'></i><span class = 'desktopOnly'>robgriffin247[at]hotmail.com</span></a></li>
+        </div>
       </ul>
     </div>
   </div>
