--- a/indexDraft.html
+++ b/indexDraft.html
@@ -3,7 +3,7 @@
   <meta charset='utf-8'/>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <title>Rob Griffin</title>
-  <link rel='stylesheet' href='style.css'>
+  <link rel='stylesheet' href='styleDraft.css'>
   <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.8.1/css/all.css'
         integrity='sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf'
         crossorigin='anonymous'/>
@@ -23,7 +23,7 @@
 
   <div class = 'contactCard'>
     <div class = 'leftCol'>
-      <img src = 'IMAGES/rgriffin.jpg' class = 'contactImg'></img>
+      <img src = 'IMAGES/face.jpg' class = 'contactImg'></img>
     </div>
     <div class = 'rightCol'>
       <ul>
@@ -94,8 +94,6 @@
 
           <li class = 'jobTitle'>Supervisor</li>
           <li>The Harbour View Restaurant</li>
-          <li>May 2008 to Sept. 2010</li>
-
         </ul>
 
       </div>
