--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       I decided to change career so that these could become my main tasks in 2020.
     </div>
     <div class = 'sectionBody'>
-      I have over ten years of experience using R for data processing, visualisation and analysis,
+      I have over ten years of experience using R for data processing, visualisation and statistical analysis,
       Rmarkdown for documentation and Rshiny for app development, and I use base R,
       data.table and tidyverse approaches. In addition to my expertise in R, I have taught myself a number of other
       programming languages including HTML, CSS and JavaScript for front-end web
