--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
     <div class = 'sectionBody'>
       I have over ten years of experience using R for data processing, visualisation and statistical analysis,
-      Rmarkdown for documentation and Rshiny for app development, and I use base R,
+      Rmarkdown for documentation and Rshiny for app development, using base R,
       data.table and tidyverse approaches. In addition to my expertise in R, I have taught myself a number of other
       programming languages including HTML, CSS and JavaScript for front-end web
       development, Java/Kotlin and XML for Android app development, and some basic
