--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
       <a href="index.html">Home</a>
       <a class="accordion">R Notes</a>
       <div class="panel">
+        <a href="stats_r_intro.html">Introduction</a>
         <a href="stats_data_type.html">Data Type</a>
       </div>
       <div class = 'navIconCon'>
