--- a/stats_r_intro.html
+++ b/stats_r_intro.html
@@ -90,6 +90,7 @@
         <div class="panel">
         <a href="stats_r_intro.html">Introduction</a>
         <a href="stats_data_type.html">Data Type</a>
+        <a href="stats_data_table.html">Data.table</a>
         </div>
         <div class = 'navIconCon'>
         <a href = 'https://twitter.com/griffinevo' target = '_blank'><i class = 'navIcon fa fa-twitter'></i></a>
