--- a/r_data_st.html
+++ b/r_data_st.html
@@ -197,7 +197,7 @@
 </pre></div>
 </div></div>
 
-The <span class="ri">=</> is also commonly used as an assignment operator, but it is better to use <span class = "ri">&lt;-</span> as it's meaning is clearer and more consistent.
+The <span class="ri">=</span> is also commonly used as an assignment operator, but it is better to use <span class = "ri">&lt;-</span> as it's meaning is clearer and more consistent.
 
 <div class="chunk" id="unnamed-chunk-7"><div class="rcode"><div class="source"><pre class="knitr r"><span class="hl std">v1</span> <span class="hl kwb">=</span> <span class="hl kwd">c</span><span class="hl std">(</span><span class="hl num">6</span><span class="hl std">,</span> <span class="hl num">2</span><span class="hl std">,</span> <span class="hl num">8</span><span class="hl std">,</span> <span class="hl num">2</span><span class="hl std">,</span> <span class="hl num">1</span><span class="hl std">,</span> <span class="hl num">9</span><span class="hl std">,</span> <span class="hl num">11</span><span class="hl std">)</span> <span class="hl com"># Is equivalent to the above</span>
 <span class="hl std">v1</span>
