--- a/index.html
+++ b/index.html
@@ -82,8 +82,12 @@
 <a href="index.html">Home</a>
 <a class="accordion">R Notes</a>
 <div class="panel">
-<a href="r_intro.html">Intro</a>
-<a href="r_data_st.html">Data structures</a>
+<div class="navPanel">
+<a href="r_intro.html">Intro to R</a>
+<a href="r_functions.html">Functions</a>
+<a href="r_data_st.html">Data</a>
+<a href="r_pt1_quiz.html">Exercises: R, functions and data</a>
+</div>
 </div>
 <div class = "navIconCon">
 <a href = "https://twitter.com/griffinevo" target = "_blank"><i class = "navIcon fa fa-twitter"></i></a>
