--- a/r_data_st.html
+++ b/r_data_st.html
@@ -64,7 +64,7 @@
 </style>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>R: Data structures</title>
+<title>Data</title>
 <link rel="stylesheet" href="style.css"/>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;400;600&display=swap"/>
@@ -75,15 +75,19 @@
 
 <!-- Top Bar -------------------------------------------------------------->
 <div class = "topBar">
-<div class = "topTitle">GriffinEvo: <span class = "topPage">Data structures</span></div>
+<div class = "topTitle">GriffinEvo: <span class = "topPage">Data</span></div>
 <div class = "openNav" onclick="openNav()">&#9776;</div>
 <div id="sideNav" class="sidenav">
 <a href="javascript:void(0)" class="closeNav" onclick="closeNav()">&times;</a>
 <a href="index.html">Home</a>
 <a class="accordion">R Notes</a>
 <div class="panel">
-<a href="r_intro.html">Intro</a>
-<a href="r_data_st.html">Data structures</a>
+<div class="navPanel">
+<a href="r_intro.html">Intro to R</a>
+<a href="r_functions.html">Functions</a>
+<a href="r_data_st.html">Data</a>
+<a href="r_pt1_quiz.html">Exercises: R, functions and data</a>
+</div>
 </div>
 <div class = "navIconCon">
 <a href = "https://twitter.com/griffinevo" target = "_blank"><i class = "navIcon fa fa-twitter"></i></a>
