--- a/r_intro.html
+++ b/r_intro.html
@@ -64,7 +64,7 @@
 </style>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>R: Intro</title>
+<title>Intro to R</title>
 <link rel="stylesheet" href="style.css"/>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;400;600&display=swap"/>
@@ -82,8 +82,12 @@
 <a href="index.html">Home</a>
 <a class="accordion">R Notes</a>
 <div class="panel">
-<a href="r_intro.html">Intro</a>
-<a href="r_data_st.html">Data structures</a>
+<div class="navPanel">
+<a href="r_intro.html">Intro to R</a>
+<a href="r_functions.html">Functions</a>
+<a href="r_data_st.html">Data</a>
+<a href="r_pt1_quiz.html">Exercises: R, functions and data</a>
+</div>
 </div>
 <div class = "navIconCon">
 <a href = "https://twitter.com/griffinevo" target = "_blank"><i class = "navIcon fa fa-twitter"></i></a>
@@ -251,7 +255,7 @@ Heads Tails
 [1] 3466
 function (x, ...) 
 UseMethod(&quot;mean&quot;)
-&lt;bytecode: 0x00000000151d5be8&gt;
+&lt;bytecode: 0x00000000151e5be8&gt;
 &lt;environment: namespace:base&gt;
 function(n){
 sample(x = c(1L:6L), size = n, replace = TRUE)
