--- a/r_pt1_quiz.html
+++ b/r_pt1_quiz.html
@@ -64,7 +64,7 @@
 </style>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Exercises I</title>
+<title>Review I</title>
 <link rel="stylesheet" href="style.css"/>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;400;600&display=swap"/>
@@ -75,7 +75,7 @@
 
 <!-- Top Bar -------------------------------------------------------------->
 <div class = "topBar">
-<div class = "topTitle">GriffinEvo: <span class = "topPage">Exercises I</span></div>
+<div class = "topTitle">GriffinEvo: <span class = "topPage">Review I</span></div>
 <div class = "openNav" onclick="openNav()">&#9776;</div>
 <div id="sideNav" class="sidenav">
 <a href="javascript:void(0)" class="closeNav" onclick="closeNav()">&times;</a>
